[gd_scene load_steps=2 format=3 uid="uid://c6mrde8vaoprr"]

[ext_resource type="Script" uid="uid://bix5t1u23x5ag" path="res://example/demo.gd" id="1_d6po2"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_d6po2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Settings" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 5.0
offset_right = 214.0
offset_bottom = 5.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2

[node name="ArtLag" type="Label" parent="CanvasLayer/Settings/HBoxContainer"]
layout_mode = 2
text = "Artificial Lag (ms)"

[node name="ArtificialLag" type="LineEdit" parent="CanvasLayer/Settings/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="UpdFreq" type="VSlider" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="UpdFreqLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 1058.0
offset_top = 3.0
offset_right = 1137.0
offset_bottom = 26.0
text = "0"
horizontal_alignment = 2

[node name="Unlink" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "Unlink"

[connection signal="pressed" from="CanvasLayer/Unlink" to="." method="_on_unlink_pressed"]
